added ejs for rendering pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
    <title>Plant Monitor</title>
 </head>
 <body>
-   <h1>Welcome to Nathaniel's Plant Montoring Webpage!</h1>
+   <h1>Welcome!</h1>
    <form action="/plants" method="POST">
       <input type="text" placeholder="name" name="name">
       <button type="submit">Submit</button>
