broke up POSTS for adding plant data and led testing

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,16 @@
    <title>Plant Monitor</title>
 </head>
 <body>
-   <h1>Welcome!</h1>
+   <h1>Welcome to Nathaniel's Plant Montoring Webpage!</h1>
    <form action="/plants" method="POST">
       <input type="text" placeholder="name" name="name">
       <button type="submit">Submit</button>
    </form>
+   <form action="/light" method="POST">
+      <input type="text" placeholder="status" name="status">
+      <button type="submit">Submit</button>
+   </form>
+</body>
 </body>
 </html>
+
